--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build --watch",
+        "build": "vite build",
+        "watch": "vite build --watch",
         "dev": "vite"
     },
     "devDependencies": {
