--- a/apache-config.conf
+++ b/apache-config.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-    DocumentRoot /usr/app
+    DocumentRoot /usr/app/public
 
-    <Directory /usr/app>
-        Options +Indexes +FollowSymLinks
+    <Directory /usr/app/public>
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
