feat(docker): change to apache

--- a/.dockerignore
+++ b/.dockerignore
@@ -19,9 +19,9 @@ vendor/**/Tests*
 **.sass-cache
 *.env*
 
-*.config.js
-?ulpfile.js
-?untfile.js
+# *.config.js
+# ?ulpfile.js
+# ?untfile.js
 phpunit.xml
 phpspec.yml
 
