--- a/Caddyfile
+++ b/Caddyfile
@@ -3,7 +3,7 @@
 }
 
 # The domain name of your server
-* {
+localhost {
 	# Set the webroot to the public/ directory
 	root * public/
 	# Enable compression (optional)
